--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
       <artifactId>elasticsearch-rest-high-level-client</artifactId>
       <version>${elasticstack.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-exporter-logging</artifactId>
+      <version>1.2.0</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>co.elastic.logging</groupId>
